--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,26 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Скрываем элементы управления видео */
+video::-webkit-media-controls {
+  display: none !important;
+}
+video::-webkit-media-controls-panel {
+  display: none !important;
+}
+video::-webkit-media-controls-play-button {
+  display: none !important;
+}
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
+}
+video::-webkit-media-controls-overlay-play-button {
+  display: none !important;
+}
+video::-webkit-media-controls-enclosure {
+  display: none !important;
+}
+
 /* Улучшенные CSS переменные для семейного отеля */
 :root {
   /* Более спокойная морская палитра */
